Sonar: Bytter til anbefalte asserts (#7023)
* Sonar: Bytter til anbefalte asserts
* Chainer asserts